# ri3521-backend

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_sql_test.py  run_sql_test_v2.py  run_sqlite_web.py
.github/workflows/: deploy.yml
app/: main.py
app/api/: api.py  deps.py
app/api/endpoints/: categories.py  director_messages.py  documents.py  health.py  login.py  news.py  pdf_documents.py  president_announcements.py  users.py
app/core/: config.py  logging_config.py
app/crud/: crud_base_document.py  crud_category.py  crud_director_message.py  crud_document.py  crud_news.py  crud_pdf_document.py  crud_president_announcement.py  crud_user.py
app/db/: base.py  session.py
app/models/: __init__.py  models.py
app/schemas/: __init__.py  schemas.py
app/utils/: init_data.py  security.py  utils.py
tests/: conftest.py  test_director_messages.py  test_document.py  test_news.py  test_president_announcements.py  test_user.py
tests/assets/: test_director_message.txt  test_director_message_to_delete.txt  test_president_announcement.txt  updated_test_director_message.txt  updated_test_president_announcement.txt
